# novos

./: #README.md#  .#README.md  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  FUNDING.yml  LICENSE  LICENSE-MIT  Makefile  README.md  README.txt  build.rs  build.sh  install.sh  justfile  shell.nix  stress.sh
.junk/: index.html
.junk/includes/: header.html
.junk/sass/: _base.scss  _forms.scss  _mobile_ui.scss
assets/blank_site/: novos.toml
assets/default_site/: index.html  novos.toml
assets/default_site/includes/: footer.html  header.html  home.html  view_template.html
assets/default_site/pages/: blog.html  privacy.html
assets/default_site/sass/: _core.scss  paper.scss  vibrant.scss
assets/default_site/static/js/: app.js
assets/default_site/templates/: -  base.html  footer.html  head.html  index.html  nav.html  post.html
assets/default_site/themes/glub/glub/: theme.toml
assets/default_site/themes/glub/sass/: _variables.scss
assets/default_site/themes/glub/static/themes/: glub.tmTheme
docs/: CLI.md  INSTALL.md  SEARCH.md  SETUP.md  SHORTCODES.md
editor/: index.html
mk/: os.mk
src/: -  build.rs  config.rs  frontmatter.rs  main.rs  models.rs  parser.rs  rss.rs  server.rs  swc.rs
test/: .gitignore  index.html  novos.toml
test/.transpile/js/: app.ts
test/includes/: footer.html
test/sass/: _core.scss
test/static/js/: app.js
