[package]
name = "novos"
version = "0.1.4"
edition = "2024"
authors = ["xer <xer@srclo.net>"]
description = "Build at the speed of thought - a self-contained, high-performance SSG"
readme = "README.md"
repository = "https://github.com/novos-org/novos"
license = "BSD-3-Clause"
keywords = ["ssg", "static-site", "sass", "fast", "freebsd"]
categories = ["command-line-utilities", "web-programming"]

[profile.release]

opt-level = 3          # Maximize speed
lto = true             # Enable Link Time Optimization (huge for speed)
codegen-units = 1      # Reduce parallel codegen for better optimization
panic = 'abort'        # Remove stack unwinding (shrinks binary, slight speed boost)
strip = true           # Automatically strip symbols (smaller binary)

[dependencies]
pulldown-cmark = "0.13.0"
rayon = "1.11"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
rss = "2.0"
chrono = "0.4"
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0.101"
rust-embed = "8.11.0"
console = "0.15"
grass = "0.13"
serde_json = "1.0.149"
syntect = "5.3.0"
dialoguer = "0.12.0"
