[package]
name = "novos"
version = "0.1.527"
edition = "2024"
authors = ["xer <xer@srclo.net>"]
description = "Build at the speed of thought - a self-contained, high-performance SSG"
readme = "README.md"
homepage = "https://novos.sh"
repository = "https://github.com/novos-org/novos"
license = "Apache-2.0 OR MIT"
keywords = ["ssg", "static-site", "sass", "fast", "freebsd"]
categories = ["command-line-utilities", "web-programming"]

[profile.release]

opt-level = 3          # Maximize speed
lto = true             # Enable Link Time Optimization (huge for speed)
codegen-units = 1      # Reduce parallel codegen for better optimization
panic = 'abort'        # Remove stack unwinding (shrinks binary, slight speed boost)
strip = true           # Automatically strip symbols (smaller binary)

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
pulldown-cmark = "0.13.0"
rayon = "1.11"
notify = "6.1"
clap = { version = "4.5", features = ["derive"] }
rss = "2.0"
chrono = "0.4"
tiny_http = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0.101"
rust-embed = "8.11.0"
console = "0.15"
grass = "0.13"
serde_json = "1.0.149"
syntect = "5.3.0"
tera = "1.20.1"
minify-html = "0.18.1"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
image = "0.25.9"
webp = "0.3.1"
regex = "1.12.3"
walkdir = "2.5.0"
